# estudo-docker

./: Dockerfile  README.md  app.py  comandos_bash.sh  pyproject.toml
