[tool.poetry]
name = "estudo-docker"
version = "0.1.0"
description = "Projeto de Estudo de Docker"
authors = ["Vitor Miracca <vitormiracca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
